overflow fix

--- a/ownership/css/captable.css
+++ b/ownership/css/captable.css
@@ -172,7 +172,6 @@
 .tableView.captable .output {
     position: absolute;
     pointer-events: none;
-    overflow-x: hidden;
     width: 67px;
     text-align: right;
 }
